--- a/src/App.css
+++ b/src/App.css
@@ -135,8 +135,8 @@ body {
   .underline {
     width: 61px;
     height: 6px;
-    background-color: darkslategrey;
-    border-radius: 9px;
+    background-color: rgb(182, 182, 182);
+    border-radius: 5px;
   }
 
   .inputs {
@@ -195,16 +195,22 @@ body {
     width: 220px;
     height: 50px;
     color: #fff;
-    background: darkslategrey;
+    background:black;
     border-radius: 50px;
     font-size: 19px;
     font-weight: 700;
     cursor: pointer;
   }
 
+  .submit:hover {
+    background-color: white;
+    color: black;
+  }
+
   .gray {
-    background: #EAEAEA;
-    color: #676767;
+    background:rgba (191, 191, 191);
+    color: white;
+    text-decoration: none;
   }
 
   .tracker {
@@ -257,7 +263,7 @@ body {
     text-align: right;
   }
 
-  /* .tracker-button {
+  .tracker-button {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -265,11 +271,16 @@ body {
     border: none;
     border-radius:50%;
     outline: none;
-    color: red;
-    font-size: 1.5em;
+    color:green;
+    font-size: 0.7em;
     margin-left: 0.5em;
     cursor: pointer;
-  } */
+  } 
+  .user-welcome {
+    font-family: sans-serif;
+    text-align: center;
+    margin-top: 1em;
+  }
 
   .tracker-button:hover {
     background: rgba( 0,0,0,0.1);
